fixing intellij problems